z-index fix for timeline event arrows

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ animation:spin 4s linear infinite;
   position: absolute;
   top: 22px;
   width: 0;
-  z-index: 1;
+  /* z-index: 0.9; */
   right: 20px;
   border: medium solid var(--event-bg);
   border-width: 10px 0 10px 10px;
@@ -154,7 +154,7 @@ animation:spin 4s linear infinite;
   position: absolute;
   top: 22px;
   width: 0;
-  z-index: 1;
+  /* z-index: 1; */
   left: 20px;
   border: medium solid var(--event-bg);
   border-width: 10px 10px 10px 0;
